update code as per Java 8 syntax